<resources>
    <string name="app_name">PhotoMap</string>
    <string name="title_activity_maps">PhotoMap</string>
    <string name="option_take_photo">Take Photo</string>
    <string name="option_add_photo">Add Photo</string>
    <string name="option_save_location">Save Map Position</string>
    <string name="option_toggle_view">Set Map Type</string>
    <string name="option_set_preferences">Set Global Preferences</string>
    <string name="option_delete">Delete Current Record</string>
    <string name="photo_index">Showing %1$d of %2$d</string>
    <string name="photo_date">Tap to Add Date</string>
    <string name="photo_caption">Tap to Add Caption</string>
    <string name="dialog_mapview">Select Map Type</string>
    <string name="location_saved">Location Saved</string>
    <string name="location_not_saved">Database access error, please try again</string>
    <string name="preference_lite_mode">Lite Mode</string>
    <string name="preference_animate">Animate Camera</string>
    <string name="preference_buildings">Show Buildings</string>
    <string name="preference_delete_cache">Delete Cache on Exit*</string>
    <string name="preference_delete_text">*Map will not be visible offline if cache is deleted</string>
    <string name="preference_save">Save Preferences</string>
    <string name="dialog_description">Enter Caption</string>
    <string name="dialog_save">Save Caption</string>
</resources>
