<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/photo_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@color/app_background"
            android:padding="10dp"
            android:text="@string/photo_index"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/photo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_background"
            android:onClick="showDatePickerDialog"
            android:padding="10dp"
            android:text="@string/photo_date"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_border">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/search_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:hint="@string/photo_caption"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/map_border"
        android:padding="10dp">

        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            map:liteMode="true"
            tools:context="cps251.edu.wccnet.jh7_jjmoore_photomap.MainActivity" />

    </FrameLayout>

</LinearLayout>